<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:columnCount="2"
        android:rowCount="2">

        <Button
            android:id="@+id/drinkbtn"
            android:layout_margin="16dp"
            android:width="150dp"
            android:text="@string/drink" />

        <Button
            android:id="@+id/snackbtn"
            android:layout_margin="16dp"
            android:width="150dp"
            android:text="@string/snack" />

        <Button
            android:id="@+id/foodbtn"
            android:layout_margin="16dp"
            android:width="150dp"
            android:text="@string/food" />

        <Button
            android:id="@+id/topupbtn"
            android:layout_margin="16dp"
            android:width="150dp"
            android:text="@string/topup" />

        <Button
            android:id="@+id/locationbtn"
            android:layout_margin="16dp"
            android:width="150dp"
            android:text="@string/location"
            android:onClick="gotolocation"/>

        <Button
            android:id="@+id/historybtn"
            android:layout_margin="16dp"
            android:width="150dp"
            android:text="@string/history" />

    </GridLayout>
</RelativeLayout>